chore(deps): add jacoco test coverage